# lofikit

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml
lofikit/: __init__.py  audio.py  cli.py  endcard.py  music_library.py  pipeline.py  video.py
lofikit/filters/: __init__.py  base.py  lofi_grade.py  passthrough.py
scripts/: dji-ingest.py
tests/: test_audio.py  test_cli.py  test_filters.py  test_music_library.py  test_pipeline.py  test_video.py
